@@ -39,6 +39,8 @@
    - stevesk@cvs.openbsd.org 2002/08/17 23:55:01
      [ssh_config.5]
      ordered list here
+ - (bal) [defines.h] Some platforms don't have SIZE_T_MAX.  So assign 
+   it to ULONG_MAX.
 
 20020813
  - (tim) [configure.ac] Display OpenSSL header/library version.
@@ -1536,4 +1538,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2425 2002/08/20 19:04:51 mouring Exp $
+$Id: ChangeLog,v 1.2426 2002/08/21 02:54:11 mouring Exp $
